Fix the weird spacing on between the header and body of the table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -305,8 +305,12 @@ tfoot {
 small.version {
   font-size: 50%;
 }
-
+tbody.spacer:before {
+  content: "-";
+  display: block;
+  line-height: 1em;
+  color: transparent;
+}
 .dataTables_scroll {position: relative;}
-.dataTables_scrollHead {margin-bottom: 20px;}
 .dataTables_scrollFoot {position: absolute; top: 38px;}
 .table > tfoot > tr > th {padding: 0;}
